# 6D_pose_filter_and_smoother

./: CMakeLists.txt  README.md
include/: kalman_filter.h  kalman_smoother.h
result/: out.txt
script/: plot_1d.py  plot_6d.py
src/: kalman_filter.cpp  kalman_smoother.cpp  main.cpp
